--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hardik Mittal | Full Stack Developer</title>
-    <meta name="description" content="Personal portfolio of Hardik Mittal, a Full Stack Developer specializing in building modern web applications." />
+    <title>Hardik Mittal | Software Engineer</title>
+    <meta name="description" content="Personal portfolio of Hardik Mittal, a Software Engineer specializing in building modern web applications." />
   </head>
   <body>
     <div id="root"></div>
